--- a/drivetome-manager-page/src/app/app.component.css
+++ b/drivetome-manager-page/src/app/app.component.css
@@ -1,12 +1,12 @@
 .new-ride-page {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: right;
   justify-content: space-around;
 }
 
 .new-ride-page > * {
-  width: 100%;
+
 }
 
 
