--- a/drivetome-manager-page/src/app/components/time.dialog.component.css
+++ b/drivetome-manager-page/src/app/components/time.dialog.component.css
@@ -1,1 +1,8 @@
 @import '../../../node_modules/bootstrap/dist/css/bootstrap.min.css';
+
+.dialog_style {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
