--- a/drivetome-manager-page/src/app/app.component.html
+++ b/drivetome-manager-page/src/app/app.component.html
@@ -1,131 +1,31 @@
-<mat-toolbar class="new-ride-page" color="primary">{{title}}</mat-toolbar>
-<div class="new-ride-page">
+<app-header></app-header>
+<div>
   <mat-horizontal-stepper>
-    <mat-step [stepControl]="firstFormGroup">
-      <form [formGroup]="firstFormGroup">
-        <ng-template matStepLabel>אוטובוס</ng-template>
-        <div>
-          <mat-form-field>
-            <input matInput formControlName="vehicleNumberCtrl" placeholder="מספר רכב" required>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field>
-            <input matInput formControlName="colorCtrl" placeholder="צבע" required>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field>
-            <input matInput formControlName="vehicleCompanyCtrl" placeholder="חברת הסעות" required>
-          </mat-form-field>
-        </div>
-        <div>
-          <button mat-raised-button color="primary" matStepperNext>הבא</button>
-        </div>
-      </form>
+    <mat-step>
+      <ng-template matStepLabel>אוטובוס</ng-template>
+      <app-bus #appBus></app-bus>
+      <div>
+        <button mat-raised-button color="primary" matStepperNext>הבא</button>
+      </div>
     </mat-step>
-
-
-    <mat-step [stepControl]="secondFormGroup">
-      <form [formGroup]="secondFormGroup">
-        <ng-template matStepLabel>זמנים</ng-template>
-        <div>
-          <mat-button-toggle-group formControlName="frequencyCtrl">
-            <mat-button-toggle value="0">חד פעמי</mat-button-toggle>
-            <mat-button-toggle value="1">מחזורי</mat-button-toggle>
-          </mat-button-toggle-group>
-        </div>
-        <div>
-          <mat-form-field>
-            <input matInput [min]="today" [max]="startDateMax()" readonly="true" [matDatepicker]="startDatePicker"
-                   formControlName="startDateCtrl" placeholder="תאריך התחלה">
-            <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
-            <mat-datepicker touchUi="true" #startDatePicker disabled="false"></mat-datepicker>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field>
-            <input matInput [min]="endDateMin()" [matDatepicker]="endDatePicker" readonly="true"
-                   formControlName="endDateCtrl"
-                   placeholder="תאריך סיום">
-            <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
-            <mat-datepicker touchUi="true" #endDatePicker disabled="false"></mat-datepicker>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field>
-            <mat-select formControlName="daySelectCtrl" multiple placeholder="בימים">
-              <mat-option *ngFor="let day of days" [value]="day.id">{{ day.name }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field>
-            <input matInput formControlName="startTimeCtrl" readonly="true" placeholder="שעת התחלה"/>
-            <button mat-button matSuffix mat-icon-button (click)="openDialogTimeStart()">
-              <mat-icon>schedule</mat-icon>
-            </button>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field>
-            <input matInput formControlName="endTimeCtrl" readonly="true" placeholder="שעת סיום"/>
-            <button mat-button matSuffix mat-icon-button (click)="openDialogTimeEnd()">
-              <mat-icon>schedule</mat-icon>
-            </button>
-          </mat-form-field>
-        </div>
-        <div>
-          <button mat-raised-button color="primary" matStepperPrevious>הקודם</button>
-          <button mat-raised-button color="primary" matStepperNext>הבא</button>
-        </div>
-      </form>
+    <mat-step>
+      <ng-template matStepLabel>זמנים</ng-template>
+      <app-line-time #appLineTime></app-line-time>
+      <div>
+        <button mat-raised-button color="primary" matStepperPrevious>הקודם</button>
+        <button mat-raised-button color="primary" matStepperNext>הבא</button>
+      </div>
     </mat-step>
-
-
-    <mat-step [stepControl]="thirdFormGroup">
-      <form [formGroup]="thirdFormGroup">
-        <ng-template matStepLabel>תחנות</ng-template>
-        <div>
-          <mat-form-field>
-            <mat-select formControlName="startStopSelectCtrl" placeholder="תחנת מוצא">
-              <mat-option *ngFor="let stop of stops" [value]="stop.id">{{ stop.name }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field>
-            <mat-select formControlName="endStopSelectCtrl" placeholder="תחנת יעד">
-              <mat-option *ngFor="let stop of stops" [value]="stop.id">{{ stop.name }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field>
-            <mat-select formControlName="stopsGoSelectCtrl" multiple placeholder="תחנות ביניים הלוך">
-              <mat-option *ngFor="let stop of stops" [value]="stop.id">{{ stop.name }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field>
-            <mat-select formControlName="stopsBackSelectCtrl" multiple placeholder="תחנות ביניים חזור">
-              <mat-option *ngFor="let stop of stops" [value]="stop.id">{{ stop.name }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field>
-            <input matInput formControlName="notesCtrl" placeholder="הערות">
-          </mat-form-field>
-        </div>
-        <div>
-          <button mat-raised-button color="primary" matStepperPrevious>הקודם</button>
-          <button mat-raised-button [disabled]="firstFormGroup.invalid||secondFormGroup.invalid||thirdFormGroup.invalid"
-                  color="primary">צור
-          </button>
-        </div>
-      </form>
+    <mat-step>
+      <ng-template matStepLabel>תחנות</ng-template>
+      <app-select-stations #appSelectStations></app-select-stations>
+      <div>
+        <button mat-raised-button color="primary" matStepperPrevious>הקודם</button>
+        <button mat-raised-button
+                [disabled]="(!(appBus.isBusValid() && appLineTime.isLineTimeValid() && appSelectStations.isSelectStationsValid()))"
+                color="primary">צור
+        </button>
+      </div>
     </mat-step>
   </mat-horizontal-stepper>
 </div>
